@@ -1,3 +1,3 @@
-EBUILD q4wine-9999.ebuild 1138 RMD160 3a8b4899d08210bfc93d6c6ab8eb01bc1da425c1 SHA1 da174853ad0bad7c3066a20b47744da3ecd0da2e SHA256 fd0247ef5b875c64bc41eb2bf5f7ba01a8c2d0feec705004cc02bea24d96926a
-MISC ChangeLog 2328 RMD160 3aa57552078d3092616a1609fe1094627c841d51 SHA1 46debc901b702259fd39cecdca108a711f63155e SHA256 6d7560e77fcd194bc83a814f7efa8034f2567ec2a936cded1d46ba992163b01c
-MISC metadata.xml 548 RMD160 df506fc9b9bafc5a2fba22057cc3f5f7e8ad0ebd SHA1 b6b46b3e7bc89e77e954a56e80dc2a4a1d175c61 SHA256 d069d3db7c792717c832dd6d7f2f82cf740c6cab15fe278d2951ee45c520d098
+EBUILD q4wine-9999.ebuild 1138 RMD160 fa898e7d6bc3419d0aa4fa75bf61503b16f568a0 SHA1 91178e5c5b90ce70d42c66bd87dae0b17e4596cb SHA256 c7609a4c5aa622709f979f3e354e04fba04140f49bb4b1efeee3700d569f3cbf
+MISC ChangeLog 2458 RMD160 61f8a2db88686c7f2d99edb0996e48675efad7d9 SHA1 b15851c9fbc27a9fa5383b28ffaae437bb9d52d3 SHA256 f785591402019cd5bfd733bb0d9175f4bec7c04e0fb567b54c9c325dab42a681
+MISC metadata.xml 546 RMD160 e230346047e9037972e219ef08a07afe86f9d746 SHA1 0a9300e8d2cf4b592f5370ef3792dfda3d90039e SHA256 0773060cd37479defa8c1a15552db1c0f896cc998338557b595dd8bad14f2373
