@@ -4,6 +4,10 @@
 
   Dropped cmake from RDEPEND
 
+  06 Oct 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-9999.ebuild,
+  metadata.xml:
+  Syncing use flags with portage ebuild
+
   06 Oct 2009; Markos Chandras <hwoarang@gentoo.org> q4wine-9999.ebuild:
   Add debug use dep on Qt dependencies
 
